Carry boundary edit results in order